--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           return liff.getProfile();
         } else {
           liff.login({
-            redirectUri: "Redirect URL",
+            redirectUri: "https://dkdev58.github.io/googleform_liff/",
           });
         }
       })
@@ -45,7 +45,7 @@
       });
     liff.init(
       {
-        liffId: liffId,
+        liffId: "1660723525-xzjPPW7r",
       },
       () => {},
       (err) => {
