--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
   <script>
     /// Config Your LIFF ID Here
-    const liffId = "";
+    const liffId = "1660723525-xzjPPW7r";
     /// Config Your LIFF ID Here
     liff.ready
       .then(() => {
@@ -45,7 +45,7 @@
       });
     liff.init(
       {
-        liffId: "1660723525-xzjPPW7r",
+        liffId: liffId,
       },
       () => {},
       (err) => {
