--- a/form2.html
+++ b/form2.html
@@ -9,47 +9,12 @@
 <body>
     <center>
         <h1>
-          กำลังเข้าสู่ Form กรุณารอซักครู่
+          กำลังเข้าสู่ form2.html กรุณารอซักครู่
         </h1>
     </center>
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
-    <script>
-      /// Config Your LIFF ID Here
-      const liffId = "1660723525-xzjPPW7r";
-      /// Config Your LIFF ID Here
-      // liff.ready
-      //   .then(() => {
-      //     if (liff.isLoggedIn()) {
-      //       return liff.getProfile();
-      //     } else {
-      //       liff.login({
-      //         redirectUri: "https://dkdev58.github.io/googleform_liff/",
-      //       });
-      //     }
-      //   })
-      //   .then((profile) => {
-      //     window.location.replace(
-      //         `https://docs.google.com/forms/d/e/1FAIpQLSc0XiIAUApu-c7mW9gQGOOIYSlW0s5PG-ydazwLsMP7Obz-vw/viewform?usp=pp_url&entry.711596102=${profile.userId}&entry.544439674=${profile.displayName}&entry.1667964899=${profile.pictureUrl}&entry.999117163=${profile.statusMessage}`
-      //     );
-      //   });
-  
-      //   // `https://docs.google.com/forms/d/e/1FAIpQLSc0XiIAUApu-c7mW9gQGOOIYSlW0s5PG-ydazwLsMP7Obz-vw/viewform?usp=pp_url&entry.711596102=${profile.userId}&entry.544439674=${profile.displayName}&entry.1667964899=${profile.pictureUrl}&entry.999117163=${profile.statusMessage}`
-  
-      //   //`https://esanphc.net?uid=${profile.userId}&dispname=${profile.displayName}&pic=${profile.pictureUrl}&status=${profile.statusMessage}`
-  
-      // liff.init(
-      //   {
-      //     liffId: liffId,
-      //   },
-      //   () => {},
-      //   (err) => {
-      //     window.alert(err);
-      //   }
-      // );
-    </script>
-</body>
-</html>
+
 
 <script>
   async function getUserProfile() {
@@ -98,3 +63,8 @@ async function main() {
     main()
 
 </script>
+
+</body>
+</html>
+
+
