--- a/form2.html
+++ b/form2.html
@@ -9,7 +9,7 @@
 <body>
     <center>
         <h1>
-          กำลังเข้าสู่ form2.html กรุณารอซักครู่
+          กำลังเข้าสู่ form2.html A
         </h1>
     </center>
 
