--- a/form2.html
+++ b/form2.html
@@ -9,58 +9,60 @@
 <body>
     <center>
         <h1>
-          กำลังเข้าสู่ form2.html A
+          กำลังเข้าสู่ form2.html A2
         </h1>
     </center>
+
+    <img id="pictureUrl">
+    <p id="userId"><b>userId:</b> </p>
+    <p id="displayName"><b>displayName:</b> </p>
+    <p id="statusMessage"><b>statusMessage:</b> </p>
+    <p id="decodedIDToken"><b>email:</b> </p>
+  
+  <!-- เพิ่มเติม 1 -->
+  
+    <p id="userid1"><b>userid1:</b> </p>
+    <p id="userid2"><b>userid2:</b> </p>
+    <p id="userid3"><b>userid3:</b> </p>
+
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
 
 
 <script>
-  function getUserProfile() {
-  const profile =  liff.getProfile()
-  document.getElementById("pictureUrl").src = profile.pictureUrl
-  document.getElementById("userId").append(profile.userId)
-  document.getElementById("statusMessage").append(profile.statusMessage)
-  document.getElementById("displayName").append(profile.displayName)
-  document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
 
-  //ทดสอบส่งค่า
-  console.log(profile.userId)
-  console.log(profile.pictureUrl)
-  //const userid1 = (profile.userId)
-  //console.log(userid1)
-  //document.getElementById("userid1").innerHTML="<h2>"+(userid1)+"</h2>"
-  document.getElementById("userid1").innerHTML="<h6>userid"+(profile.userId)+"</h6>"
-  document.getElementById("userid2").innerHTML="userid_form<input name='userid_form' type='text' value='"+(profile.userId)+"'>"
-  document.getElementById("userid3").innerHTML="userid_form hidden <input name='userid_form' type='hidden' value='"+(profile.userId)+"'>"
-  //.ทดสอบส่งค่า
-}
+  /// Config Your LIFF ID Here
+  const liffId = "1660723525-xzjPPW7r";
+    /// Config Your LIFF ID Here
+    liff.ready
+      .then(() => {
+        if (liff.isLoggedIn()) {
+          return liff.getProfile();
+        } else {
+          liff.login({
+            redirectUri: "https://dkdev58.github.io/googleform_liff/",
+          });
+        }
+      })
+      .then((profile) => {
+        document.getElementById("pictureUrl").src = profile.pictureUrl
+        document.getElementById("userId").append(profile.userId)
+        document.getElementById("statusMessage").append(profile.statusMessage)
+        document.getElementById("displayName").append(profile.displayName)
+        document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
 
-function main() {
-      // alert("LINE Developers x Skooldio")
-      
-      liff.init({ liffId: "1660718056-3l4OOLK7" })
-      // await liff.init({ liffId: "YOUR-LIFF-ID" })
-      document.getElementById("isLoggedIn").append(liff.isLoggedIn())
-      if (liff.isLoggedIn()) {
-        // getEnvironment()
-        getUserProfile()
-        // getContext()
-        // getFriendship()
-      } else {
-       // liff.login()
-      }
+        //ทดสอบส่งค่า
+        console.log(profile.userId)
+        console.log(profile.pictureUrl)
+        //const userid1 = (profile.userId)
+        //console.log(userid1)
+        //document.getElementById("userid1").innerHTML="<h2>"+(userid1)+"</h2>"
+        document.getElementById("userid1").innerHTML="<h6>userid"+(profile.userId)+"</h6>"
+        document.getElementById("userid2").innerHTML="userid_form<input name='userid_form' type='text' value='"+(profile.userId)+"'>"
+        document.getElementById("userid3").innerHTML="userid_form hidden <input name='userid_form' type='hidden' value='"+(profile.userId)+"'>"
+        //.ทดสอบส่งค่า
+      });
 
-      // createUniversalLink()
-
-      //getEnvironment()
-      //getUserProfile()
-      //getContext()
-      //getFriendship()
-      // createUniversalLink()
-    }
-    main()
 
 </script>
 
