--- a/form2.html
+++ b/form2.html
@@ -9,7 +9,7 @@
 <body>
     <center>
         <h1>
-          กำลังเข้าสู่ form2.html A2
+          กำลังเข้าสู่ form2.html A3
         </h1>
     </center>
 
@@ -57,9 +57,9 @@
         //const userid1 = (profile.userId)
         //console.log(userid1)
         //document.getElementById("userid1").innerHTML="<h2>"+(userid1)+"</h2>"
-        document.getElementById("userid1").innerHTML="<h6>userid"+(profile.userId)+"</h6>"
-        document.getElementById("userid2").innerHTML="userid_form<input name='userid_form' type='text' value='"+(profile.userId)+"'>"
-        document.getElementById("userid3").innerHTML="userid_form hidden <input name='userid_form' type='hidden' value='"+(profile.userId)+"'>"
+        document.getElementById("userid1").innerHTML="<h6>userid :"+(profile.userId)+"</h6>"
+        document.getElementById("userid2").innerHTML="userid_form :<input name='userid_form' type='text' value='"+(profile.userId)+"'>"
+        document.getElementById("userid3").innerHTML="userid_form hidden : <input name='userid_form' type='hidden' value='"+(profile.userId)+"'>"
         //.ทดสอบส่งค่า
       });
 
