--- a/form2.html
+++ b/form2.html
@@ -9,7 +9,7 @@
 <body>
     <center>
         <h1>
-          กำลังเข้าสู่ form2.html A3
+          กำลังเข้าสู่ form2.html A4
         </h1>
     </center>
 
@@ -63,9 +63,14 @@
         //.ทดสอบส่งค่า
       });
 
-
 </script>
 
+  <!-- VConsole -->
+  <script src="js/vconsole.min.js"></script>
+  <script>
+    var vConsole = new VConsole()
+    console.log("Hello World!")
+  </script>
 </body>
 </html>
 
