--- a/form2.html
+++ b/form2.html
@@ -28,7 +28,6 @@
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
 
-
 <script>
 
   /// Config Your LIFF ID Here
@@ -71,6 +70,7 @@
       //ทดสอบส่งค่า
       console.log(profile.userId)
       console.log(profile.pictureUrl)
+      console.log("ทดสอบ")
       //const userid1 = (profile.userId)
       //console.log(userid1)
       //document.getElementById("userid1").innerHTML="<h2>"+(userid1)+"</h2>"
@@ -79,6 +79,7 @@
       document.getElementById("userid3").innerHTML="userid_form hidden <input name='userid_form' type='hidden' value='"+(profile.userId)+"'>"
       //.ทดสอบส่งค่า
     };
+    
     async function main() {
       // alert("LINE Developers x Skooldio")
       
@@ -110,7 +111,10 @@
   <script>
     var vConsole = new VConsole()
     console.log("Hello World!")
+    console.log("สวัสดี")
   </script>
+  
+
 </body>
 </html>
 
