--- a/form2.html
+++ b/form2.html
@@ -9,7 +9,7 @@
 <body>
     <center>
         <h1>
-          กำลังเข้าสู่ form2.html A7
+          กำลังเข้าสู่ form2.html A9
         </h1>
     </center>
 
@@ -26,38 +26,9 @@
     <p id="userid3"><b>userid3:</b> </p>
 
 
-    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
 
 <script>
-
-  /// Config Your LIFF ID Here
-  // const liffId = "1660723525-xzjPPW7r";
-  //   /// Config Your LIFF ID Here
-  //   liff.ready
-  //     .then(() => {
-  //       if (liff.isLoggedIn()) {
-  //         return liff.getProfile();
-  //       } else {
-  //         liff.login({
-  //           redirectUri: "https://dkdev58.github.io/googleform_liff/",
-  //         });
-  //       }
-  //     })
-      // .then((profile) => {
-      //   document.getElementById("pictureUrl").src = profile.pictureUrl
-      //   document.getElementById("userId").append(profile.userId)
-      //   document.getElementById("statusMessage").append(profile.statusMessage)
-      //   document.getElementById("displayName").append(profile.displayName)
-      //   document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
-
-      //   //ทดสอบส่งค่า
-      //   console.log(profile.userId)
-      //   console.log(profile.pictureUrl)
-      //   document.getElementById("userid1").innerHTML="<h6>userid :"+(profile.userId)+"</h6>"
-      //   document.getElementById("userid2").innerHTML="userid_form :<input name='userid_form' type='text' value='"+(profile.userId)+"'>"
-      //   document.getElementById("userid3").innerHTML="userid_form hidden : <input name='userid_form' type='hidden' value='"+(profile.userId)+"'>"
-      //   //.ทดสอบส่งค่า
-      // });
 
       async function getUserProfile() {
       const profile = await liff.getProfile()
@@ -104,6 +75,7 @@
       // createUniversalLink()
     }
     main()
+
 </script>
 
   <!-- VConsole -->
@@ -114,6 +86,10 @@
     console.log("สวัสดี")
   </script>
   
+  <script>
+    // Avoid Liff caching for debuging
+    document.write('<link rel="stylesheet" href="css/style.css?cache=' + new Date().getTime() + '" media="all">')
+  </script>
 
 </body>
 </html>
