--- a/form2.html
+++ b/form2.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="stylesheet" href="css/style.css" media="all">
 </head>
 <body>
     <center>
         <h1>
-          กำลังเข้าสู่ form2.html A9
+          กำลังเข้าสู่ form2.html A10
         </h1>
     </center>
 
