--- a/form2get.html
+++ b/form2get.html
@@ -254,7 +254,7 @@
     
     function external2() {
       liff.openWindow({
-        url: 'https://esanphc.net?uid= ${profile.userId}',
+        url: 'https://esanphc.net?uid='(profile.userId),
         external: true
       })
     }
