--- a/form2get.html
+++ b/form2get.html
@@ -45,7 +45,7 @@
 
 <!-- FORM -->
 <h1>FORM</h1>
-<form action="form2addget.php" method="get">
+<form action="form2addget.html" method="get">
 
   <p>
     User ID : <input id="userid" type="text" value="">
