--- a/form2.html
+++ b/form2.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<h1>A28 PUT</h1>
+<h1>A31 PUT</h1>
 
 
 <p id="os"><b>OS:</b> </p>
@@ -48,28 +48,28 @@
 <form action="http://www.caffeinez.com/liff/form2/form2add.php" method="post">
 
   <p>
-    User ID : <input id="userid" type="text" value="">
+    User ID : <input id="userid" name="userid"  type="text" value="">
   </p>
   <p>
-    Display Name : <input id="dispname" type="text" value="">
+    Display Name : <input id="dispname" name="dispname" type="text" value="">
   </p>
   <p>
-    Picture : <input id="picture" type="text" value="">
+    Picture : <input id="picture" name="picture" type="text" value="">
   </p>
   <p>
-    Status : <input id="status" type="text" value="">
+    Status : <input id="status" name="status" type="text" value="">
   </p>
 
 
   <!-- Hidden Start -->
 
-    U: <input id="userid_h" type="hidden" value="">
+    U: <input id="userid_h" name="userid_h" type="hidden" value="">
 
-    D: <input id="dispname_h" type="hidden" value="">
+    D: <input id="dispname_h" name="dispname_h" type="hidden" value="">
 
-    P: <input id="picture_h" type="hidden" value="">
+    P: <input id="picture_h" name="picture_h" type="hidden" value="">
 
-    S: <input id="status_h" type="hidden" value="">
+    S: <input id="status_h" name="status_h" type="hidden" value="">
 
   <!-- Hidden End -->
 
