--- a/form2get.html
+++ b/form2get.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<h1>A30 GET</h1>
+<h1>A31 GET</h1>
 
 
 <p id="os"><b>OS:</b> </p>
@@ -45,19 +45,19 @@
 
 <!-- FORM -->
 <h1>FORM</h1>
-<form action="form2addget.html" method="get">
+<form action="http://www.caffeinez.com/liff/form2/form2addget.php" method="get">
 
   <p>
-    User ID : <input id="userid" type="text" value="">
+    User ID : <input id="userid" name="userid" type="text" value="">
   </p>
   <p>
-    Display Name : <input id="dispname" type="text" value="">
+    Display Name : <input id="dispname" name="dispname" type="text" value="">
   </p>
   <p>
-    Picture : <input id="picture" type="text" value="">
+    Picture : <input id="picture" name="picture" type="text" value="">
   </p>
   <p>
-    Status : <input id="status" type="text" value="">
+    Status : <input id="status" name="status" type="text" value="">
   </p>
 
   <input type="submit" value="Send">
