--- a/form2get.html
+++ b/form2get.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<h1>A31 GET</h1>
+<h1>A32 GET</h1>
 
 
 <p id="os"><b>OS:</b> </p>
@@ -45,7 +45,9 @@
 
 <!-- FORM -->
 <h1>FORM</h1>
-<form action="http://www.caffeinez.com/liff/form2/form2addget.php" method="get">
+<!-- <form action="http://www.caffeinez.com/liff/form2/form2addget.php" method="get"> -->
+
+<form action="http://www.caffeinez.com/liff/form2/form2addget.php?openExternalBrowser=1" method="get"></form>
 
   <p>
     User ID : <input id="userid" name="userid" type="text" value="">
