--- a/form2.html
+++ b/form2.html
@@ -250,7 +250,7 @@
         getContext()
         getFriendship()
       } else {
-       // liff.login()
+        liff.login()
       }
 
       createUniversalLink()
