--- a/form2get.html
+++ b/form2get.html
@@ -232,7 +232,7 @@
         getContext()
         getFriendship()
       } else {
-       // liff.login()
+        liff.login()
       }
 
       createUniversalLink()
