--- a/form2.html
+++ b/form2.html
@@ -255,11 +255,11 @@
 
       createUniversalLink()
 
-      //getEnvironment()
-      //getUserProfile()
-      //getContext()
-      //getFriendship()
-      // createUniversalLink()
+      getEnvironment()
+      getUserProfile()
+      getContext()
+      getFriendship()
+      createUniversalLink()
     }
     main()
   </script>
